--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
     window.location.href = "login.html";
   }
 </script>
+<script>
+  // اگر کاربر لاگین نکرده، به صفحه login هدایت شود
+  if (localStorage.getItem('isLoggedIn') !== 'true') {
+    window.location.href = "login.html";
+  }
+</script>
 
 </body>
 </html>
